[package]
name = "PlayHotkey"
version = "0.1.0"
authors = ["v_0ver <kvover@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
inputbot = "*"
eframe = "*"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "*", default-features = false, features = ["png"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
